notifications and template test